--- a/index.html
+++ b/index.html
@@ -4,6 +4,24 @@
         <head>
     </head>
     <body>
-        <h1>Hello my precious</h1>
+        <h1><b>Hello my precious</b></h1>
+        <h2><em>Greetings, people of earth</em></h2>
+        <div style=color:blue;>
+            <h3>Howdy folks</h3>
+            <p>This is a <em>paragraph</em>. We can add text here using out fingers. Once upon a time there was a green man called <b>Bob</b>. He was a very anxious man, but suprisingly happy. One day he went to a party and got really drunk and ended up going to the moon, sadly, he didnt have oxygen and turned blue.This is a paragraph. We can add text here using out fingers. Once upon a time there was a green man called <b>Bob</b>. He was a very anxious man, but suprisingly happy. One day he went to a party and got really drunk and ended up going to the moon, sadly, he didnt have oxygen and turned blue.This is a <em>paragraph</em>. We can add text here using out fingers. Once upon a time there was a green man called <b>Bob</b>. He was a very anxious man, but suprisingly happy. One day he went to a party and got really drunk and ended up going to the moon, sadly, he didnt have oxygen and turned blue.</p>
+        </div>
+        
+        <p>This is a <em>paragraph</em>. We can add text here using out fingers. Once upon a time there was a green man called <b>Bob</b>. He was a very anxious man, but suprisingly happy. One day he went to a party and got really drunk and ended up going to the moon, sadly, he didnt have oxygen and turned blue.This is a <em>paragraph</em>. We can add text here using out fingers. Once upon a time there was a green man called <b>Bob</b>. He was a very anxious man, but suprisingly happy. One day he went to a party and got really drunk and ended up going to the moon, sadly, he didnt have oxygen and turned blue.</p>
+        <ul>
+            <li><b>Bob</b></li>
+            <li><em>Bob</em></li>
+            <li Style=color:green;>Bob</li>
+        </ul>
+        <ol>
+            <li Style=color:green;>Paragraph</li>
+            <li><em>Paragraph</em></li>
+            <li><b>Paragraph</b></li>
+        </ol>
+        
     </body>
 </html>
